--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,5 @@ jobs:
       - checkout
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go get gotest.tools/gotestsum
+      - run: gotestsum --junitfile unit-tests.xml ./...
