--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
       - run: go get gotest.tools/gotestsum
-      - run: gotestsum --junitfile unit-tests.xml ./...
+      - run: /go/bin/gotestsum --junitfile test.xml ./...
