correct the flag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
       - run: go get gotest.tools/gotestsum
-      - run: /go/bin/gotestsum --short-verbose --junitfile test.xml ./...
+      - run: /go/bin/gotestsum -f short-verbose --junitfile test.xml ./...
