--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
     steps:
       - checkout
       # specify any bash command here prefixed with `run: `
+      - run: env|sort
       - run: go get -v -t -d ./...
       - run: go get gotest.tools/gotestsum
       - run: /go/bin/gotestsum -f short-verbose --junitfile test.xml ./...
