--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - checkout
       # specify any bash command here prefixed with `run: `
       - run: env|sort
+      - run: cat "${BASH_ENV}"
       - run: go get -v -t -d ./...
       - run: go get gotest.tools/gotestsum
       - run: /go/bin/gotestsum -f short-verbose --junitfile test.xml ./...
